--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/dbtest
+spring.datasource.username=root
+spring.jpa.database=MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.dialect= org.hibernate.dialect.MySQL5Dialect
+spring.jackson.serialization.fail-on-empty-beans=false
