--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,7 @@ server.error.include-binding-errors=always
 spring.datasource.url=jdbc:mysql://localhost:3306/dbtest
 spring.datasource.username=root
 spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.fail-on-empty-beans=false
